welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:5: error: 'while' expected but 'if' found.
  if (FoundBaggles<3) {droite();FoundBaggles=0}
  ^Poucet:7: error: '(' expected but ';' found.
  while (crossing()==false) }
^Poucet:7: error: illegal start of simple expression
  while (crossing()==false) }
                            ^